--- a/package.json
+++ b/package.json
@@ -1,15 +1,3 @@
-{
-  "name": "johnporto",
-  "version": "1.0.0",
-  "description": "",
-  "main": "app.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "axios": "^1.12.2"
-  }
+"scripts": {
+  "start": "node app.js"
 }
