--- a/package.json
+++ b/package.json
@@ -1,3 +1,10 @@
-"scripts": {
-  "start": "node app.js"
+{
+  "name": "meu-app-node",
+  "version": "1.0.0",
+  "description": "App Node.js de exemplo para Render",
+  "main": "app.js",
+  "scripts": {
+    "start": "node app.js"
+  },
+  "dependencies": {}
 }
