--- a/package.json
+++ b/package.json
@@ -6,5 +6,8 @@
   "scripts": {
     "start": "node app.js"
   },
-  "dependencies": {}
+  "dependencies": {
+    npm install express fluent-ffmpeg
+  }
+  
 }
