--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "node app.js"
   },
   "dependencies": {
-    npm install express fluent-ffmpeg
+    "express": "^4.18.2",
+  "fluent-ffmpeg": "^2.1.2"
   }
   
 }
