--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "meu-app-node",
+  "name": "cointel-site",
   "version": "1.0.0",
-  "description": "App Node.js de exemplo para Render",
-  "main": "app.js",
+  "description": "Captura artigos do CoinTelegraph e disponibiliza em JSON",
+  "main": "index.js",
   "scripts": {
-    "start": "node app.js"
+    "start": "node index.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
-  "fluent-ffmpeg": "^2.1.2"
+    "puppeteer": "^23.0.0",
+    "rss-parser": "^3.12.0",
+    "express": "^4.18.2"
   }
-  
 }
