--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cointel-site",
+  "name": "feed",
   "version": "1.0.0",
   "description": "Captura artigos do CoinTelegraph e disponibiliza em JSON",
   "main": "index.js",
@@ -8,9 +8,13 @@
     "postinstall": "PUPPETEER_SKIP_CHROMIUM_DOWNLOAD=false npm install puppeteer@latest"
   },
   "dependencies": {
-    "puppeteer": "^24.10.2",
-    "rss-parser": "^3.12.0",
-    "express": "^4.18.2"
+    "express": "^4.21.2",
+    "puppeteer": "^24.22.3",
+    "puppeteer-extra": "^3.3.6",
+    "puppeteer-extra-plugin-stealth": "^2.11.2",
+    "rss-parser": "^3.13.0"
   },
-  "license": "MIT"
+  "license": "MIT",
+  "keywords": [],
+  "author": ""
 }
