--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "postinstall": "PUPPETEER_SKIP_CHROMIUM_DOWNLOAD=false npm install puppeteer@latest"
   },
   "dependencies": {
+    "axios": "^1.12.2",
+    "cheerio": "^1.1.2",
     "express": "^4.21.2",
     "puppeteer": "^24.22.3",
     "puppeteer-extra": "^3.3.6",
