--- a/package.json
+++ b/package.json
@@ -1,15 +1,22 @@
 {
-  "name": "Captura Feed",
+  "name": "feed",
   "version": "1.0.0",
-  "main": "teste.js",
+  "description": "Captura artigos do CoinTelegraph e disponibiliza em JSON",
+  "main": "index.js",
   "scripts": {
-    "start": "node teste.js"
+    "start": "node index.js",
+    "postinstall": "PUPPETEER_SKIP_CHROMIUM_DOWNLOAD=false npm install puppeteer@latest"
   },
   "dependencies": {
-    "axios": "^1.7.0",
-    "cheerio": "^1.0.0-rc.12",
-    "rss-parser": "^3.13.0",
-    "basic-ftp": "^5.0.2",
-    "express": "^4.19.0"
-  }
+    "axios": "^1.12.2",
+    "cheerio": "^1.1.2",
+    "express": "^4.21.2",
+    "puppeteer": "^24.22.3",
+    "puppeteer-extra": "^3.3.6",
+    "puppeteer-extra-plugin-stealth": "^2.11.2",
+    "rss-parser": "^3.13.0"
+  },
+  "license": "MIT",
+  "keywords": [],
+  "author": ""
 }
